--- a/Paginas/contactos.html
+++ b/Paginas/contactos.html
@@ -9,18 +9,22 @@
   <link rel="shortcut icon" href="../Multimedias/logo3.jpg" type="image/x-icon">
   <link rel="stylesheet" href="../CSS/bootstrap.min.css">
   <link rel="stylesheet" href="../CSS/styles.css">
+
   <title>
     Brighterindumentariayaccesorios
   </title>
+
 </head>
 
 <body>
-  <div class="container-fluid">
-    <header class="header_contac row">
 
-      <nav class="nav_contac row">
+  <div class="div_header">
 
-        <ul class="item  col-lg-12 col-md-12 col-sm-4">
+    <header>
+
+      <nav class="nav_index">
+
+        <ul class="item ">
           <li><a href="../index.html">Inicio</a></li>
           <li><a href="../Paginas/quienessomos.html">¿Quienes somos?</a></li>
           <li><a href="../Paginas/nuestrosproductos.html">Nuestros Productos</a></li>
@@ -28,48 +32,50 @@
           <li><a href="../Paginas/realizarpedidos.html">Realizar pedido</a></li>
         </ul>
 
-        <div class="contac_header  col-lg-12 col-md-12 col-sm-12">
-          <h1 class="titulo_cont">
+        <div class="header_index">
+          <h1 class="titulobrighter">
             Brighter RyM
           </h1>
+
         </div>
 
       </nav>
 
+    </header>
+
   </div>
   
-  </header>
-  <section class="row">
+  
+  <section class="section_quienes">
 
-
-    <h3 class="titulo3 col-lg-12 col-md-12 col-sm-12">
+    <h3 class="titulo3">
       Rellenar el formulario
     </h3>
 
 
-    <div class="contenedor_contactos col-lg-12 col-md-12 col-sm-12">
+    <div class="contenedor_contactos">
       <form class="formulario">
         <div class="contenido1">
           <label for="text">Nombre:</label>
           <input id="text" type="text">
         </div>
 
-        <div class="contenido1 col-lg-12 col-md-12 col-sm-12">
+        <div class="contenido1">
           <label for="text">Apellido:</label>
           <input id="text" type="text">
         </div>
 
-        <div class="contenido1 col-lg-12 col-md-12 col-sm-12">
+        <div class="contenido1">
           <label for="text">Email:</label>
           <input id="email" type="email">
         </div>
 
-        <div class="contenido1 col-lg-12 col-md-12 col-sm-12">
+        <div class="contenido1">
           <label for="text">Contraseña:</label>
           <input id="Contraseña" type="password">
         </div>
 
-        <div class="contenido1 col-lg-12 col-md-12 col-sm-12">
+        <div class="contenidoenviar">
           <input type="submit" value="Enviar">
           <input type="reset">
         </div>
@@ -78,29 +84,29 @@
     </div>
   </section>
 
-  <footer class="row">
+  <footer>
 
-    <div class="tituloredes col-lg-12 col-md-12 col-sm-12">
+    <div class="tituloredes">
       <h3>¡Seguinos en nuestras redes sociales!</h3>
     </div>
 
-    <div class="redes col-lg-12 col-md-12 col-sm-12">
-      <ul>
-        <li><a href="../https://es-la.facebook.com/" target="_blank"> <img src="../Multimedias/iconofb2.png"
-              alt="facebook-logo" class="face"></a></li>
+    <div class="redes">
+      <ul class="ul_footer">
+        
         <li><a href="../https://www.instagram.com/?hl=es-la" target="_blank"> <img src="../Multimedias/instaicono2.png"
               alt="instagram-logo" class="insta"></a> </li>
         <li><a
             href="../https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=1209600&osid=1&continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&emr=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"
-            target="_blank"><img src="../Multimedias/iconogmail.png" alt="gmail-logo" class="redes"></a></li>
+            target="_blank"><img src="../Multimedias/iconogmail.png" alt="gmail-logo" class="redesinwp"></a></li>
         <li><a href="../https://www.whatsapp.com/?lang=es" target="_blank"> <img src="../Multimedias/iconowpp.jpg"
-              alt="whatsapp-logo" class="redes"></a> </li>
-
+              alt="whatsapp-logo" class="redesinwp"></a> </li>
+              <li><a href="../https://es-la.facebook.com/" target="_blank"> <img src="../Multimedias/iconofb2.png"
+                alt="facebook-logo" class="face"></a></li>
       </ul>
     </div>
 
     <div class="derechos">
-      <p>Todos los derechos reservados</p>
+      <p class="derechos">Todos los derechos reservados</p>
     </div>
 
   </footer>
