--- a/Paginas/quienessomos.html
+++ b/Paginas/quienessomos.html
@@ -14,79 +14,79 @@
     </title>
 </head>
 
-<body class="body_quienessomos">
-    <div class="contenedorprincipal container-fluid ">
-        <header class="header_contac row">
-            <div class="item_quienes">
-                <nav class="nav_contac row">
+<body>
 
-                    <Ul class="item col-lg-12 col-md-12 col-sm-4">
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="../Paginas/quienessomos.html">¿Quienes somos?</a></li>
-                        <li><a href="../Paginas/nuestrosproductos.html">Nuestros productos</a></li>
-                        <li><a href="../Paginas/contactos.html">Contactos</a></li>
-                        <li><a href="../Paginas/realizarpedidos.html">Realizar pedido</a></li>
-                    </Ul>
+    <header>
 
-                    <div class="quienes_header col-lg-12 col-md-12 col-sm-12">
-                        <h1 class="titulo_quienes">
-                            Brighter RyM
-                        </h1>
-                    </div>
-                </nav>
-            </div>
+        <nav class="nav_index ">
 
-        </header>
-        <section class="section_quienes row">
-            <div class="contenedor_quienes">
-                <div class="subtitulo_quienes col-lg-12 col-md-12 col-sm-12">
-                    <h2>¿Quienes somos?</h2>
-                </div>
-                <div class="text_quienes col-lg-12 col-md-12 col-sm-12">
-                    <p>Somos una empresa que se dedicada a la venta de indumentaria y accesorios femeninos, masculinos y
-                        niños.
-                        <br>
-                        Contamos con varios estilos y diseños de acuerdo a cada ocasión. <br> Además, tenemos un
-                        excelente
-                        personal
-                        que van a estar disponibles para cualquier consulta o pedidos.
-                    </p>
-                </div>
-                <video controls class="col-lg-12 col-md-12 col-sm-12">
-                    <source src="../Multimedias/publicidad ropa.mp4" type="video/mp4" class="videoquienes">
-                </video>
-            </div>
-        </section>
+            <Ul class="item">
+                <li><a href="../index.html"> Inicio</a></li>
+                <li><a href="../Paginas/quienessomos.html">¿Quienes somos?</a></li>
+                <li><a href="../Paginas/nuestrosproductos.html">Nuestros productos</a></li>
+                <li><a href="../Paginas/contactos.html">Contactos</a></li>
+                <li><a href="../Paginas/realizarpedidos.html">Realizar pedido</a></li>
+            </Ul>
+
+                <h1 class="titulobrighter">
+                    Brighter RyM
+                </h1>
+            
+        </nav>
+    </header>
 
 
-        <footer class="row">
-            <div class="tituloredes col-lg-12 col-md-12 col-sm-12">
-                <h3>
-                    No te pierdas las nuevas tendencias...¡Seguinos!
-                </h3>
-            </div>
 
-            <div class="redes redes col-lg-12 col-md-12 col-sm-12">
-                <ul>
-                    <li><a href="https://es-la.facebook.com/" target="_blank"> <img src="../Multimedias/iconofb2.png"
-                                alt="facebook-logo" class="face"></a></li>
-                    <li><a href="https://www.instagram.com/?hl=es-la" target="_blank"> <img
-                                src="../Multimedias/instaicono2.png" alt="instagram-logo" class="insta"></a> </li>
-                    <li><a href="http://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=1209600&osid=1&continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&emr=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"
-                            target="_blank"> <img src="../Multimedias/iconogmail.png" alt="gmail-logo" class="correo">
-                        </a>
-                    </li>
-                    <li><a href="https://www.whatsapp.com/?lang=es" target="_blank"> <img
-                                src="../Multimedias/iconowpp.jpg" alt="whatsapp-logo" class="wpp"></a> </li>
+    <section class="section_quienes ">
 
-                </ul>
-            </div>
-            <div class="derechos">
+        <div class="subtitulo_quienes">
+            <h2>¿Quienes somos?</h2>
+        </div>
+        <div class="text_quienes">
+            <p>Somos una empresa que se dedicada a la venta de indumentaria y accesorios femeninos, masculinos y
+                niños.
+                <br>
+                Contamos con varios estilos y diseños de acuerdo a cada ocasión. <br> Además, tenemos un
+                excelente
+                personal
+                que van a estar disponibles para cualquier consulta o pedidos.
+            </p>
+        </div>
+        <video controls class="cont_video">
+            <source src="../Multimedias/publicidad ropa.mp4" type="video/mp4" class="videoquienes">
+        </video>
+
+    </section>
+
+
+    <footer>
+        <div class="tituloredes">
+            <h3>
+                No te pierdas las nuevas tendencias...¡Seguinos!
+            </h3>
+        </div>
+
+        <div class=" redes">
+            <ul class="ul_footer">
+
+                <li><a href="https://www.instagram.com/?hl=es-la" target="_blank"> <img
+                            src="../Multimedias/instaicono2.png" alt="instagram-logo" class="insta"></a> </li>
+                <li><a href="http://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=1209600&osid=1&continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&emr=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"
+                        target="_blank"> <img src="../Multimedias/iconogmail.png" alt="gmail-logo" class="redesinwp">
+                    </a>
+                </li>
+                <li><a href="https://www.whatsapp.com/?lang=es" target="_blank"> <img src="../Multimedias/iconowpp.jpg"
+                            alt="whatsapp-logo" class="redesinwp"></a> </li>
+                <li><a href="https://es-la.facebook.com/" target="_blank"> <img src="../Multimedias/iconofb2.png"
+                            alt="facebook-logo" class="face"></a></li>
+            </ul>
+        </div>
+        <div class="derechos">
             <p class="derechos">Todos los derechos reservados</p>
         </div>
 
-        </footer>
-    </div>
+    </footer>
+
     <script src="../js/bootstrap.min.js"></script>
 </body>
 
