--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
    <link rel="shortcut icon" href="multimedias/logo3.jpg" type="image/x-icon">
    <link rel="stylesheet" href="./CSS/bootstrap.min.css">
-   <link rel="stylesheet" href="./CSS/styles.css">
+   <link rel="stylesheet" href="./css/styles.css">
    <title>
       Brighterindumentariayaccesorios
    </title>
@@ -16,93 +16,100 @@
 
 <body>
 
-   <div class="container-fluid">
-      <header class="row">
-         <nav class="nav_index row">
+   <div class="div_header ">
 
-            <ul class="item col-lg-12 col-md-12 col-sm-4">
+      <header>
+
+         <nav class="nav_index ">
+
+            <ul class="item">
                <li><a href="./index.html">Inicio</a></li>
                <li><a href="./Paginas/quienessomos.html">¿Quienes somos?</a></li>
                <li><a href="./Paginas/nuestrosproductos.html">Nuestros productos</a></li>
                <li><a href="./Paginas/contactos.html">Contactos</a></li>
                <li><a href="./Paginas/realizarpedidos.html">Realizar pedido</a></li>
             </ul>
-            <div class="header_index col-lg-12 col-md-12 col-sm-12">
-               <h1 class="titulo">
+
+            <div class="header_index">
+               <h1 class="titulobrighter">
                   Brighter RyM
                </h1>
+
             </div>
-
+         </nav>
+      </header>
    </div>
-   </header>
 
+   <section>
 
-   <section class="row">
-
-      <h2 class="subtitulo col-lg-12 col-md-12 col-sm-12">
+      <h2 class="subtitulo">
          Brighter RyM
       </h2>
 
-      <h3 class="subtitulo_indumentariayaccesorios col-lg-12 col-md-12 col-sm-12">
+      <h3 class="subtitulo_indumentariayaccesorios">
          (indumentaria y accesorios)
       </h3>
 
+      
+         <div class="contenido_index1">
+            <div class="contenido">
+
+               <img src="Multimedias/gifmujer.gif" alt="fotoindumentaria mujer" class="imagen1">
+               <h2 class="tituloindu">Indumentaria Mujer</h2>
+               <p class="textoin">La ropa dice mucho de tu personalidad. Conocé las nuevas prendas deportivas,
+                  informales,
+                  formales en nuestra tienda online</p>
+            </div>
 
 
-      <div class="contenido col-lg-4 col-md-4 col-sm-4">
+            <div class="contenido">
+               <img src="Multimedias/gif hombre.gif" alt="fotohombre" class="fotohombre">
+               <h2 class="tituloindu">Indumentaria hombre</h2>
+               <p class="textoin">¡Renueva tu estilo!prendas dinámicas y con mucha personalidad te esperan </p>
+            </div>
+         </div>
 
-         <img src="Multimedias/gifmujer.gif" alt="fotoindumentaria mujer" class="imagen1">
-         <h2>Indumentaria Mujer</h2>
-         <p class="texto">La ropa dice mucho de tu personalidad. Conocé las nuevas prendas deportivas, informales,
-            formales en nuestra tienda online</p>
-      </div>
+         <div class="contenido_index2">
+            <div class="contenido">
 
-
-      <div class="contenido col-lg-4 col-md-4 col-sm-4">
-         <img src="Multimedias/gif hombre.gif" alt="fotohombre" class="fotohombre">
-         <h2>Indumentaria hombre</h2>
-         <p class="texto">¡Renueva tu estilo!prendas dinámicas y con mucha personalidad te esperan </p>
-      </div>
-
-
-      <div class="contenido col-lg-4 col-md-4 col-sm-4">
-
-         <img src="Multimedias/gifniños.gif" alt="foto" class="imagen3">
-         <h2>Indumentaria niños</h2>
-         <p class="texto">Ropa infantil para bebés y niños.Te ofrecemos variedad de estilo,diseños,tendencias que los
-            niños desean
-            y quieren vestir </p>
-      </div>
+               <img src="Multimedias/gifniños.gif" alt="foto" class="imagen3">
+               <h2 class="tituloindu">Indumentaria niños</h2>
+               <p class="textoin">Ropa infantil para bebés y niños.Te ofrecemos variedad de estilo,diseños,tendencias
+                  que
+                  los
+                  niños desean
+                  y quieren vestir </p>
+            </div>
 
 
-      <div class="contenido col-lg-4 col-md-4 col-sm-4">
-         <img src="Multimedias/accesorios.gif" alt="foto" class="imagen4">
-         <h2> Más</h2>
-         <a href="paginas/más.html"></a>
-         <p class="texto">Encontrá accesorios para el cabello, maquillaje, barbijos </p>
-      </div>
+            <div class="contenido">
+               <img src="Multimedias/accesorios.gif" alt="foto" class="imagen4">
+               <h2 class="tituloindu"> Más</h2>
+               <a href="paginas/más.html"></a>
+               <p class="textoin">Encontrá accesorios para el cabello, maquillaje, barbijos </p>
+            </div>
+         </div>
+      
 
    </section>
 
-
-   <footer class="row">
-      <div class="tituloredes col-lg-12 col-md-12 col-sm-12">
+   <footer>
+      <div class="tituloredes">
          <h3>
             ¡Seguinos en nuestras redes sociales!
          </h3>
       </div>
 
-      <div class="redes col-lg-12 col-md-12 col-sm-12">
-         <ul>
-            <li><a href="https://es-la.facebook.com/" target="_blank"> <img src="Multimedias/iconofb2.png"
-                     alt="facebook-logo" class="face"></a></li>
+      <div class="redes">
+         <ul class="ul_footer">
             <li><a href="https://www.instagram.com/?hl=es-la" target="_blank"> <img src="Multimedias/instaicono2.png"
                      alt="instagram-logo" class="insta"></a> </li>
             <li><a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=1209600&osid=1&continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&emr=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"
-                  target="_blank"><img src="Multimedias/iconogmail.png" alt="gmail-logo" class="redes"></a></li>
+                  target="_blank"><img src="Multimedias/iconogmail.png" alt="gmail-logo" class="redesinwp"></a></li>
             <li><a href="https://www.whatsapp.com/?lang=es" target="_blank"> <img src="Multimedias/iconowpp.jpg"
-                     alt="whatsapp-logo" class="redes"></a> </li>
-
+                     alt="whatsapp-logo" class="redesinwp"></a> </li>
+            <li><a href="https://es-la.facebook.com/" target="_blank"> <img src="Multimedias/iconofb2.png"
+                     alt="facebook-logo" class="face"></a></li>
          </ul>
       </div>
       <div class="derechos">
@@ -113,6 +120,7 @@
 
    </div>
    <script src="./js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
