--- a/Paginas/nuestrosproductos.html
+++ b/Paginas/nuestrosproductos.html
@@ -14,125 +14,114 @@
     </title>
 </head>
 
-<body class="body_nuestros">
-    <div class="contenedor principal">
+<body>
+    <div class="div_header">
 
         <header>
-            <div class="item_nuestros">
-                <nav class="nav_nuestrosproduct">
 
-                    <ul class="item">
+            <nav class="nav_index">
 
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="../Paginas/quienessomos.html">¿Quienes somos?</a></li>
-                        <li><a href="../Paginas/nuestrosproductos.html">Nuestros productos</a></li>
-                        <li><a href="../Paginas/contactos.html">Contactos</a></li>
-                        <li><a href="../Paginas/realizarpedidos.html">Realizar pedido</a></li>
-
-                    </ul>
-                    <div class="produc_header">
-                        <h1 class="titulo_produc">
-                            Brighter RyM
-                        </h1>
-                    </div>
-
-                </nav>
-            </div>
-
-        </header>
-
-        <section class="section_nuestrosp">
-            <div class="contenedor_nuestrosp">
-
-                <div class="titulo_nuestros">
-                    <h1>NUESTROS PRODUCTOS</h1>
-                </div>
-
-                <div class="texto_nuestrosproductos">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, harum eos ullam repudiandae,
-                        eaque
-                        eligendi reiciendis laudantium fuga temporibus officiis asperiores cum dolore possimus error!
-                        Dicta
-                        dolor doloremque mollitia error!
-                        Corporis corrupti, esse iste, necessitatibus facere magni iusto omnis saepe quas, totam mollitia
-                        inventore nostrum laborum aliquam fugit quos unde debitis? Earum, obcaecati accusamus! Magnam
-                        deserunt minus repellendus ut velit?
-                        Sequi saepe porro assumenda, a molestiae illo commodi nemo sint iure ex vero ipsa nostrum
-                        praesentium omnis facilis ipsam modi repudiandae, quod nam exercitationem. Numquam accusantium
-                        nemo
-                        officia nihil doloremque.
-                        Tempore soluta quos beatae non nulla expedita odit quod dolore, eos perspiciatis repellendus
-                        doloribus, obcaecati aliquam minus reprehenderit unde laborum blanditiis cum incidunt voluptate?
-                        Maxime asperiores deleniti at placeat. Veniam.
-                        Iusto vero odit ipsa debitis eaque, voluptatum enim voluptas possimus atque, quasi consequatur
-                        deleniti repudiandae eveniet illum illo, velit ratione corporis. Quam quia velit commodi.
-                        Dolorum,
-                        praesentium voluptates. Ea, at.
-                        Fugit qui impedit distinctio, ratione eos, id ut aspernatur at quis in numquam tenetur pariatur
-                        sit
-                        culpa facilis vitae perferendis temporibus maxime quae molestias? Ratione, dolores eligendi.
-                        Veniam,
-                        blanditiis velit.
-                    </p>
-                </div>
-
-                <div class="fotosprod">
-
-                    <div class="topraso">
-                        <img src="../Multimedias/topraso.jpg" alt="Foto_Top_Raso" class="imgtopraso">
-                        <p> Top Raso $500</p>
-                    </div>
-
-                    <div class="topdeport">
-                        <img src="../Multimedias/topdeportivo.jpg" alt="Foto_Top_Deport" class="topdeportivo">
-                        <p>TOP DEPORTIVO $700</p>
-                    </div>
-
-                    <div class="moños">
-                        <img src="../Multimedias/moños.jfif" alt="Foto_Moños" class="imgmoños">
-                        <p>Moños $100</p>
-                    </div>
-
-                    <div class="portacosmeticos">
-                        <img src="../Multimedias/portacosméticos.jfif" alt="Foto_Portacosmeticos" class="imgporta">
-                        <p> Portacosméticos $400 </p>
-                    </div>
-
-                    <div class="body">
-                        <img src="../Multimedias/body.jpg" alt="Foto_Body" class="imgbody">
-                        <p>Body $300</p>
-                    </div>
-                </div>
-            </div>
-
-        </section>
-
-        <footer>
-            <div class="tituloredes">
-                <h3>¡Seguinos en nuestras redes sociales!</h3>
-            </div>
-
-            <div class="redes">
-
-                <ul>
-                    <li><a href="../https://es-la.facebook.com/" target="_blank"> <img src="../Multimedias/iconofb2.png"
-                                alt="facebook-logo" class="face"></a></li>
-                    <li><a href="../https://www.instagram.com/?hl=es-la" target="_blank"> <img
-                                src="../Multimedias/instaicono2.png" alt="instagram-logo" class="insta"></a> </li>
-                    <li><a href="../https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=1209600&osid=1&continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&emr=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"
-                            target="_blank"> <img src="../Multimedias/iconogmail.png" alt="gmail-logo"
-                                class="correo"></a>
-                    </li>
-                    <li><a href="../https://www.whatsapp.com/?lang=es" target="_blank"> <img
-                                src="../Multimedias/iconowpp.jpg" alt="whatsapp-logo" class="wpp"></a> </li>
+                <ul class="item">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../Paginas/quienessomos.html">¿Quienes somos?</a></li>
+                    <li><a href="../Paginas/nuestrosproductos.html">Nuestros productos</a></li>
+                    <li><a href="../Paginas/contactos.html">Contactos</a></li>
+                    <li><a href="../Paginas/realizarpedidos.html">Realizar pedido</a></li>
                 </ul>
-            </div>
-            <p>Todos los derechos reservados</p>
 
+                <div class="header_index">
+                    <h1 class="titulobrighter">
+                        Brighter RyM
+                    </h1>
 
-        </footer>
+                </div>
+            </nav>
+        </header>
     </div>
-    <script src="../js/bootstrap.min.js"></script>
-</body>
 
+
+    <section>
+
+
+        <div class="titulo_nuestros">
+            <h1>NUESTROS PRODUCTOS</h1>
+        </div>
+
+        <div class="texto_nuestrosproductos">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, harum eos ullam repudiandae,
+                eaque
+                eligendi reiciendis laudantium fuga temporibus officiis asperiores cum dolore possimus error!
+                Corporis corrupti, esse iste, necessitatibus facere magni iusto omnis saepe quas, totam mollitia
+                inventore nostrum laborum aliquam fugit quos unde debitis? Earum, obcaecati accusamus! Magnam
+                deserunt minus repellendus ut velit?
+
+
+            </p>
+        </div>
+
+        <div class="fotosprod">
+            <div class="div2nuestros">
+
+            <div class="topraso">
+                <img src="../Multimedias/topraso.jpg" alt="Foto_Top_Raso" class="imgtopraso">
+                <p> TOP RASO $500</p>
+            </div>
+
+            <div class="topdeport">
+                <img src="../Multimedias/topdeportivo.jpg" alt="Foto_Top_Deport" class="topdeportivo">
+                <p>TOP DEPORTIVO $700</p>
+            </div>
+        
+
+            <div class="moños">
+                <img src="../Multimedias/moños.jfif" alt="Foto_Moños" class="imgmoños">
+                <p>Moños $100</p>
+            </div>
+        </div>
+<div class="div3nuestros">
+            <div class="portacosmeticos">
+                <img src="../Multimedias/portacosméticos.jfif" alt="Foto_Portacosmeticos" class="imgporta">
+                <p> Portacosméticos $400 </p>
+            </div>
+
+            <div class="body">
+                <img src="../Multimedias/body.jpg" alt="Foto_Body" class="imgbody">
+                <p>Body $300</p>
+            </div>
+        </div>
+        </div>
+    
+
+    </section>
+
+    <footer>
+        <div class="tituloredes">
+            <h3>¡Seguinos en nuestras redes sociales!</h3>
+        </div>
+
+        <div class="redes">
+
+            <ul class="ul_footer">
+
+                <li><a href="../https://www.instagram.com/?hl=es-la" target="_blank"> <img
+                            src="../Multimedias/instaicono2.png" alt="instagram-logo" class="insta"></a> </li>
+                <li><a href="../https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=1209600&osid=1&continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&emr=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"
+                        target="_blank"> <img src="../Multimedias/iconogmail.png" alt="gmail-logo" class="redesinwp"></a>
+                </li>
+                <li><a href="../https://www.whatsapp.com/?lang=es" target="_blank"> <img
+                            src="../Multimedias/iconowpp.jpg" alt="whatsapp-logo" class="redesinwp"></a> </li>
+                <li><a href="../https://es-la.facebook.com/" target="_blank"> <img src="../Multimedias/iconofb2.png"
+                            alt="facebook-logo" class="face"></a></li>
+            </ul>
+        </div>
+
+        <div class="derechos">
+            <p>Todos los derechos reservados</p>
+        </div>
+
+    </footer>
+
+    <script src="../js/bootstrap.min.js"></script>
+
+</body>
 </html>
