--- a/Paginas/realizarpedidos.html
+++ b/Paginas/realizarpedidos.html
@@ -1,71 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <link rel="shortcut icon" href="../Multimedias/logo3.jpg" type="image/x-icon">
-        <link rel="stylesheet" href="../CSS/bootstrap.min.css">
-        <link rel="stylesheet" href="../CSS/styles.css">
-        <title>
-           Brighterindumentariayaccesorios
-        </title>
-     </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="shortcut icon" href="../Multimedias/logo3.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="../CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
+    <title>
+        Brighterindumentariayaccesorios
+    </title>
+</head>
 
-     <body>
-         <div class="container_fluid">
-        <header class="header_contac row">
-           <nav>
-              
-                <Ul class="item col-lg-12 col-md-12 col-sm-4">
+<body>
+    <header class="header_nav">
+        <div>
+            <nav>
+
+                <Ul class="item">
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="../Paginas/quienessomos.html">¿Quienes somos?</a></li>
                     <li><a href="../Paginas/nuestrosproductos.html">Nuestros productos</a></li>
-                    <li><a href="../Paginas/contactos.html" >Contactos</a></li>
+                    <li><a href="../Paginas/contactos.html">Contactos</a></li>
                     <li><a href="../Paginas/realizarpedidos.html">Realizar pedido</a></li>
                 </Ul>
-                <div class="contac_header col-lg-12 col-md-12 col-sm-12"></div>
-                <h1 class="titulo">
-                     Brighter RyM
+                <div class="header_index"></div>
+                <h1 class="titulobrighter">
+                    Brighter RyM
                 </h1>
-        </nav>
-  
-    </div>
+            </nav>
+
+        </div>
 
     </header>
-    <section class="row">
-    <div> 
-    </div>
-        <h1>
-        ¿Cómo realizar pedidos?
-        </h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem, est architecto. Nesciunt voluptate quia earum labore ratione sapiente maiores laudantium amet repellendus necessitatibus assumenda impedit autem minus blanditiis, cumque dignissimos.</p>
-    <h2>¿Dónde nos encontramos?</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint alias aliquid at quibusdam reiciendis doloribus magni repudiandae quod, nobis ut dolores aspernatur excepturi repellendus cupiditate incidunt voluptate repellat enim cum.</p>
-    <img src="../Multimedias/maps.png" alt="ubicación de la tienda" class="maps">
-    <h3>Mínimo para envios al interior</h3>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum sequi, fugit maxime iure aperiam placeat adipisci recusandae provident blanditiis soluta vitae ducimus dolor dolorum impedit a magni officiis culpa illum.</p>
-</section>
 
-<footer class="row">
-    <div>
-    <h3>No te pierdas las nuevas tendencias...Seguinos</h3>
-</div>
-    <div class="redes col-lg-12 col-md-12 col-sm-12">
-    <ul>
-        <li><a href="https://es-la.facebook.com/" target="_blank"> <img src="../Multimedias/iconofb2.png" alt="facebook-logo" class="face"></a></li>
-        <li><a href="https://www.instagram.com/?hl=es-la" target="_blank"> <img src="../Multimedias/instaicono2.png" alt="instagram-logo" class="insta"></a> </li>
-        <li><a href="http://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=1209600&osid=1&continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&emr=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank" > <img src="../Multimedias/iconogmail.png" alt="gmail-logo" class="redes"> </a></li>
-        <li><a href="https://www.whatsapp.com/?lang=es" target="_blank"> <img src="../Multimedias/iconowpp.jpg" alt="whatsapp-logo" class="redes"></a> </li>
-    </ul>
-   </div>
-   <div class="derechos">
-    <p>Todos los derechos reservados</p>
-</div>
-   
-</footer>
-</div>
-<script src="../js/bootstrap.min.js"></script>
+    <section class="section_quienes">
+        <h1 class="subtitulo_realizar">
+            ¿Cómo realizar pedidos?
+        </h1>
+        <div class="text_quienes">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem, est architecto. Nesciunt voluptate
+                quia earum labore ratione sapiente maiores laudantium amet repellendus necessitatibus assumenda impedit
+                autem minus blanditiis, cumque dignissimos.</p>
+        </div>
+        <h2 class="subtitulo_quienes">¿Dónde nos encontramos?</h2>
+        <p class="text_quienes">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint alias aliquid at quibusdam
+            reiciendis doloribus magni repudiandae quod, nobis ut dolores aspernatur excepturi repellendus cupiditate
+            incidunt voluptate repellat enim cum.</p>
+        <img src="../Multimedias/maps.png" alt="ubicación de la tienda" class="maps">
+        <h3 class="subtitulo_realizar">Mínimo para envios al interior</h3>
+        <p class="text_quienes">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum sequi, fugit maxime
+            iure aperiam placeat adipisci recusandae provident blanditiis soluta vitae ducimus dolor dolorum impedit a
+            magni officiis culpa illum.</p>
+    </section>
+
+    <footer>
+        <div class="tituloredes">
+            <h3>No te pierdas las nuevas tendencias...Seguinos</h3>
+        </div>
+        <div class="redes">
+            <ul class="ul_footer">
+
+                <li><a href="https://www.instagram.com/?hl=es-la" target="_blank"> <img
+                            src="../Multimedias/instaicono2.png" alt="instagram-logo" class="insta"></a> </li>
+                <li><a href="http://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=1209600&osid=1&continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&emr=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"
+                        target="_blank"> <img src="../Multimedias/iconogmail.png" alt="gmail-logo" class="redesinwp">
+                    </a></li>
+                <li><a href="https://www.whatsapp.com/?lang=es" target="_blank"> <img src="../Multimedias/iconowpp.jpg"
+                            alt="whatsapp-logo" class="redesinwp"></a> </li>
+                <li><a href="https://es-la.facebook.com/" target="_blank"> <img src="../Multimedias/iconofb2.png"
+                            alt="facebook-logo" class="face"></a></li>
+            </ul>
+        </div>
+        <div class="derechos">
+            <p class="derechos">Todos los derechos reservados</p>
+        </div>
+
+    </footer>
+    </div>
+    <script src="../js/bootstrap.min.js"></script>
 </body>
+
 </html>
